# sb_youtube_crawler

./: pyproject.toml
examples/: config.toml
sb_youtube_crawler/: sb_youtube_crawler.py
sb_youtube_crawler/parser/: parse_category.py  parse_channel.py  parse_channel_detail.py  parse_video_detail.py  parse_video_list.py
sb_youtube_crawler/schema/: channel.py  video.py
